--- a/package.json
+++ b/package.json
@@ -14,5 +14,11 @@
   },
   "dependencies": {
     "xmlbuilder2": "^3.1.1"
+  },
+  "build": {
+    "win": {
+      "icon": "resources/icon.ico",
+      "target": "msi"
+    }
   }
 }
