Changed app name

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "tboirmc",
-  "productName": "TBOI:R MC",
+  "productName": "TBOIRMC",
   "version": "1.0.0",
   "description": "TBOI:R mod constructor by ondawave",
   "main": "main.js",
